fix extra space on bottom of build log page

--- a/BlazarUI/app/stylus/page/build.styl
+++ b/BlazarUI/app/stylus/page/build.styl
@@ -36,4 +36,3 @@ pre.log
 
 .build-container
   position absolute
-  top -5px
